--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -116,16 +116,20 @@ h3{
 
 //dropdown menu
 .drop_menu{
-  margin-top: 22px;
+  //margin-top: 22px;
   border-color: #368ee0;
+  padding: 0;
+  font-size: inherit;
 }
 .drop{
   padding: 10px;
-  color:#106DB6
+  color:#106DB6;
+  min-height: 55px;
 }
 .drop_red{
   padding: 10px;
-  color: #ED1C24
+  color: #ED1C24;
+  min-height: 55px;
 }
 .drop_icon{
   width: 20px
@@ -190,7 +194,8 @@ h3{
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 40px;
+  width: 35px;
+  margin-right: 5px;
 }
 .db_user_detail {
   height: 15px;
