--- a/src/app/main/contract-signature/components/index/index.component.html
+++ b/src/app/main/contract-signature/components/index/index.component.html
@@ -1,4 +1,7 @@
 <div class="container-fluid">
-  <app-sign-contract #ContractSign></app-sign-contract>
-<!--  <app-add-contract #AddContract></app-add-contract>-->
+<!--  <app-sign-contract #ContractSign></app-sign-contract>-->
+
+  <app-infor-coordination *ngIf="this.datas.step == 'infor-coordination'" [datas]="this.datas"></app-infor-coordination>
+  <app-add-contract *ngIf="this.datas.step == 'confirm-coordination'" #AddContract [datas]="this.datas"></app-add-contract>
+<!--  <button *ngIf="this.datas.step == 'infor-coordination'" (click)="this.datas.step = 'confirm-coordination'">Điều phối hợp đồng</button>-->
 </div>
