edit valid step 2

--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -28,7 +28,7 @@
                       <img src="assets/img/icon_name.svg" class="input-img">
                       <input type="text" formControlName="name" class="input-text">
                     </div>
-                    <div *ngIf="!userView.get('name')?.valid && (userView.get('name')?.dirty ||userView.get('name')?.touched)">
+                    <div *ngIf="!userView.get('name')?.valid && (userView.get('name')?.dirty || (userView.get('name')?.touched || submitted))">
                       <p class="alert alert-danger error-detail" role="alert" [hidden]="!userView.get('name')?.errors?.required">
                         Họ tên không được để trống
                       </p>
@@ -40,7 +40,7 @@
                       <img src="assets/img/login_email.svg" class="input-img">
                       <input type="text" formControlName="email" class="input-text">
                     </div>
-                    <div *ngIf="!userView.get('email')?.valid && (userView.get('email')?.dirty ||userView.get('email')?.touched)">
+                    <div *ngIf="!userView.get('email')?.valid && (userView.get('email')?.dirty || (userView.get('email')?.touched || submitted))">
                       <p class="alert alert-danger error-detail" role="alert" [hidden]="!userView.get('email')?.errors?.required">
                         Email không được để trống
                       </p>
@@ -76,7 +76,7 @@
                       <input type="text" formControlName="name" class="input-text">
                     </div>
 
-                    <div *ngIf="!alias.get('name')?.valid && (alias.get('name')?.dirty ||alias.get('name')?.touched)">
+                    <div *ngIf="!alias.get('name')?.valid && (alias.get('name')?.dirty || (alias.get('name')?.touched || submitted))">
                       <p class="alert alert-danger error-detail" role="alert" [hidden]="!alias.get('name')?.errors?.required">
                         Họ tên không được để trống
                       </p>
@@ -90,7 +90,7 @@
                       <input type="text" formControlName="email" class="input-text">
                     </div>
 
-                    <div *ngIf="!alias.get('email')?.valid && (alias.get('email')?.dirty ||alias.get('email')?.touched)">
+                    <div *ngIf="!alias.get('email')?.valid && (alias.get('email')?.dirty || (alias.get('email')?.touched || submitted))">
                       <p class="alert alert-danger error-detail" role="alert" [hidden]="!alias.get('email')?.errors?.required">
                         Email không được để trống
                       </p>
@@ -126,7 +126,7 @@
                       </ng-multiselect-dropdown>
                     </div>
 
-                    <div *ngIf="!alias.get('signType')?.valid && (alias.get('signType')?.dirty ||alias.get('signType')?.touched)">
+                    <div *ngIf="!alias.get('signType')?.valid && (alias.get('signType')?.dirty || (alias.get('signType')?.touched || submitted))">
                       <p class="alert alert-danger error-detail" role="alert" [hidden]="!alias.get('signType')?.errors?.required">
                         Loại ký không được để trống
                       </p>
@@ -141,7 +141,7 @@
                     <div class="label_item">Số điện thoại <span class="require_star">*</span></div>
                     <input type="text" formControlName="phone" class="form-control input_phone">
 
-                    <div *ngIf="!alias.get('phone')?.valid && (alias.get('phone')?.dirty ||alias.get('phone')?.touched)">
+                    <div *ngIf="!alias.get('phone')?.valid && (alias.get('phone')?.dirty || (alias.get('phone')?.touched || submitted))">
                       <p class="alert alert-danger error-detail" role="alert" [hidden]="!alias.get('phone')?.errors?.required">
                         Số điện thoại không được để trống
                       </p>
@@ -177,7 +177,7 @@
                       <img src="assets/img/icon_name.svg" class="input-img">
                       <input type="text" formControlName="name" class="input-text">
                     </div>
-                    <div *ngIf="!userDoc.get('name')?.valid && (userDoc.get('name')?.dirty ||userDoc.get('name')?.touched)">
+                    <div *ngIf="!userDoc.get('name')?.valid && (userDoc.get('name')?.dirty || (userDoc.get('name')?.touched || submitted))">
                       <p class="alert alert-danger error-detail" role="alert" [hidden]="!userDoc.get('name')?.errors?.required">
                         Họ tên không được để trống
                       </p>
@@ -189,7 +189,7 @@
                       <img src="assets/img/login_email.svg" class="input-img">
                       <input type="text" formControlName="email" class="input-text">
                     </div>
-                    <div *ngIf="!userDoc.get('email')?.valid && (userDoc.get('email')?.dirty ||userDoc.get('email')?.touched)">
+                    <div *ngIf="!userDoc.get('email')?.valid && (userDoc.get('email')?.dirty || (userDoc.get('email')?.touched || submitted))">
                       <p class="alert alert-danger error-detail" role="alert" [hidden]="!userDoc.get('email')?.errors?.required">
                         Email không được để trống
                       </p>
@@ -223,7 +223,7 @@
                         </ng-template>
                       </ng-multiselect-dropdown>
                     </div>
-                    <div *ngIf="!userDoc.get('signType')?.valid && (userDoc.get('signType')?.dirty ||userDoc.get('signType')?.touched)">
+                    <div *ngIf="!userDoc.get('signType')?.valid && (userDoc.get('signType')?.dirty || (userDoc.get('signType')?.touched || submitted))">
                       <p class="alert alert-danger error-detail" role="alert" [hidden]="!userDoc.get('signType')?.errors?.required">
                         Loại ký không được để trống
                       </p>
@@ -266,7 +266,7 @@
                   <label class="labelOrg">TÊN ĐỐI TÁC <span class="require_star">*</span></label>
                   <input class="form-control textOrg" id="name" name="name" formControlName="name">
                 </p>
-                <div *ngIf="!partners.get('name')?.valid && (partners.get('name')?.dirty ||partners.get('name')?.touched)">
+                <div *ngIf="!partners.get('name')?.valid && (partners.get('name')?.dirty || (partners.get('name')?.touched || submitted))">
                   <p class="alert alert-danger error-detail" role="alert" [hidden]="!partners.get('name')?.errors?.required">
                     Tên đối tác không được để trống
                   </p>
@@ -288,7 +288,7 @@
                               <img src="assets/img/icon_name.svg" class="input-img">
                               <input type="text" formControlName="name" class="input-text">
                             </div>
-                            <div *ngIf="!partnerLead.get('name')?.valid && (partnerLead.get('name')?.dirty ||partnerLead.get('name')?.touched)">
+                            <div *ngIf="!partnerLead.get('name')?.valid && (partnerLead.get('name')?.dirty || (partnerLead.get('name')?.touched || submitted))">
                               <p class="alert alert-danger error-detail" role="alert" [hidden]="!partnerLead.get('name')?.errors?.required">
                                 Họ tên không được để trống
                               </p>
@@ -300,7 +300,7 @@
                               <img src="assets/img/login_email.svg" class="input-img">
                               <input type="text" formControlName="email" class="input-text">
                             </div>
-                            <div *ngIf="!partnerLead.get('email')?.valid && (partnerLead.get('email')?.dirty ||partnerLead.get('email')?.touched)">
+                            <div *ngIf="!partnerLead.get('email')?.valid && (partnerLead.get('email')?.dirty || (partnerLead.get('email')?.touched || submitted))">
                               <p class="alert alert-danger error-detail" role="alert" [hidden]="!partnerLead.get('email')?.errors?.required">
                                 Email không được để trống
                               </p>
@@ -335,7 +335,7 @@
                               <img src="assets/img/icon_name.svg" class="input-img">
                               <input type="text" formControlName="name" class="input-text">
                             </div>
-                            <div *ngIf="!partnerView.get('name')?.valid && (partnerView.get('name')?.dirty ||partnerView.get('name')?.touched)">
+                            <div *ngIf="!partnerView.get('name')?.valid && (partnerView.get('name')?.dirty || (partnerView.get('name')?.touched || submitted))">
                               <p class="alert alert-danger error-detail" role="alert" [hidden]="!partnerView.get('name')?.errors?.required">
                                 Họ tên không được để trống
                               </p>
@@ -347,7 +347,7 @@
                               <img src="assets/img/login_email.svg" class="input-img">
                               <input type="text" formControlName="email" class="input-text">
                             </div>
-                            <div *ngIf="!partnerView.get('email')?.valid && (partnerView.get('email')?.dirty ||partnerView.get('email')?.touched)">
+                            <div *ngIf="!partnerView.get('email')?.valid && (partnerView.get('email')?.dirty || (partnerView.get('email')?.touched || submitted))">
                               <p class="alert alert-danger error-detail" role="alert" [hidden]="!partnerView.get('email')?.errors?.required">
                                 Email không được để trống
                               </p>
@@ -382,7 +382,7 @@
                               <img src="assets/img/icon_name.svg" class="input-img">
                               <input type="text" formControlName="name" class="input-text">
                             </div>
-                            <div *ngIf="!partnerSign.get('name')?.valid && (partnerSign.get('name')?.dirty ||partnerSign.get('name')?.touched)">
+                            <div *ngIf="!partnerSign.get('name')?.valid && (partnerSign.get('name')?.dirty || (partnerSign.get('name')?.touched || submitted))">
                               <p class="alert alert-danger error-detail" role="alert" [hidden]="!partnerSign.get('name')?.errors?.required">
                                 Họ tên không được để trống
                               </p>
@@ -394,7 +394,7 @@
                               <img src="assets/img/login_email.svg" class="input-img">
                               <input type="text" formControlName="email" class="input-text">
                             </div>
-                            <div *ngIf="!partnerSign.get('email')?.valid && (partnerSign.get('email')?.dirty ||partnerSign.get('email')?.touched)">
+                            <div *ngIf="!partnerSign.get('email')?.valid && (partnerSign.get('email')?.dirty || (partnerSign.get('email')?.touched || submitted))">
                               <p class="alert alert-danger error-detail" role="alert" [hidden]="!partnerSign.get('email')?.errors?.required">
                                 Email không được để trống
                               </p>
@@ -428,7 +428,7 @@
                                 </ng-template>
                               </ng-multiselect-dropdown>
                             </div>
-                            <div *ngIf="!partnerSign.get('signType')?.valid && (partnerSign.get('signType')?.dirty ||partnerSign.get('signType')?.touched)">
+                            <div *ngIf="!partnerSign.get('signType')?.valid && (partnerSign.get('signType')?.dirty || (partnerSign.get('signType')?.touched || submitted))">
                               <p class="alert alert-danger error-detail" role="alert" [hidden]="!partnerSign.get('signType')?.errors?.required">
                                 Loại ký không được để trống
                               </p>
@@ -441,7 +441,7 @@
                           <div class="col-md-5">
                             <div class="label_item">Số điện thoại <span class="require_star">*</span></div>
                             <input type="text" formControlName="phone" class="form-control input_phone">
-                            <div *ngIf="!partnerSign.get('phone')?.valid && (partnerSign.get('phone')?.dirty ||partnerSign.get('phone')?.touched)">
+                            <div *ngIf="!partnerSign.get('phone')?.valid && (partnerSign.get('phone')?.dirty || (partnerSign.get('phone')?.touched || submitted))">
                               <p class="alert alert-danger error-detail" role="alert" [hidden]="!partnerSign.get('phone')?.errors?.required">
                                 Số điện thoại không được để trống
                               </p>
@@ -476,7 +476,7 @@
                               <img src="assets/img/icon_name.svg" class="input-img">
                               <input type="text" formControlName="name" class="input-text">
                             </div>
-                            <div *ngIf="!partnerDoc.get('name')?.valid && (partnerDoc.get('name')?.dirty ||partnerDoc.get('name')?.touched)">
+                            <div *ngIf="!partnerDoc.get('name')?.valid && (partnerDoc.get('name')?.dirty || (partnerDoc.get('name')?.touched || submitted))">
                               <p class="alert alert-danger error-detail" role="alert" [hidden]="!partnerDoc.get('name')?.errors?.required">
                                 Họ tên không được để trống
                               </p>
@@ -488,7 +488,7 @@
                               <img src="assets/img/login_email.svg" class="input-img">
                               <input type="text" formControlName="email" class="input-text">
                             </div>
-                            <div *ngIf="!partnerDoc.get('email')?.valid && (partnerDoc.get('email')?.dirty ||partnerDoc.get('email')?.touched)">
+                            <div *ngIf="!partnerDoc.get('email')?.valid && (partnerDoc.get('email')?.dirty || (partnerDoc.get('email')?.touched || submitted))">
                               <p class="alert alert-danger error-detail" role="alert" [hidden]="!partnerDoc.get('email')?.errors?.required">
                                 Email không được để trống
                               </p>
@@ -522,7 +522,7 @@
                                 </ng-template>
                               </ng-multiselect-dropdown>
                             </div>
-                            <div *ngIf="!partnerDoc.get('signType')?.valid && (partnerDoc.get('signType')?.dirty ||partnerDoc.get('signType')?.touched)">
+                            <div *ngIf="!partnerDoc.get('signType')?.valid && (partnerDoc.get('signType')?.dirty || (partnerDoc.get('signType')?.touched || submitted))">
                               <p class="alert alert-danger error-detail" role="alert" [hidden]="!partnerDoc.get('signType')?.errors?.required">
                                 Loại ký không được để trống
                               </p>
@@ -544,6 +544,11 @@
                   <label class="labelOrg">TÊN ĐỐI TÁC <span class="require_star">*</span></label>
                   <input class="form-control textOrg" id="name" name="name" formControlName="name">
                 </p>
+                <div *ngIf="!partners.get('name')?.valid && (partners.get('name')?.dirty || (partners.get('name')?.touched || submitted))">
+                  <p class="alert alert-danger error-detail" role="alert" [hidden]="!partners.get('name')?.errors?.required">
+                    Tên đối tác không được để trống
+                  </p>
+                </div>
 
                 <!-- Partner user -->
                 <div class="add_content" formArrayName="partnerUsers">
@@ -561,7 +566,7 @@
                               <img src="assets/img/icon_name.svg" class="input-img">
                               <input type="text" formControlName="name" class="input-text">
                             </div>
-                            <div *ngIf="!partnerUser.get('name')?.valid && (partnerUser.get('name')?.dirty ||partnerUser.get('name')?.touched)">
+                            <div *ngIf="!partnerUser.get('name')?.valid && (partnerUser.get('name')?.dirty || (partnerUser.get('name')?.touched || submitted))">
                               <p class="alert alert-danger error-detail" role="alert" [hidden]="!partnerUser.get('name')?.errors?.required">
                                 Họ tên không được để trống
                               </p>
@@ -573,7 +578,7 @@
                               <img src="assets/img/login_email.svg" class="input-img">
                               <input type="text" formControlName="email" class="input-text">
                             </div>
-                            <div *ngIf="!partnerUser.get('email')?.valid && (partnerUser.get('email')?.dirty ||partnerUser.get('email')?.touched)">
+                            <div *ngIf="!partnerUser.get('email')?.valid && (partnerUser.get('email')?.dirty || (partnerUser.get('email')?.touched || submitted))">
                               <p class="alert alert-danger error-detail" role="alert" [hidden]="!partnerUser.get('email')?.errors?.required">
                                 Email không được để trống
                               </p>
@@ -604,7 +609,7 @@
                                 </ng-template>
                               </ng-multiselect-dropdown>
                             </div>
-                            <div *ngIf="!partnerUser.get('signType')?.valid && (partnerUser.get('signType')?.dirty ||partnerUser.get('signType')?.touched)">
+                            <div *ngIf="!partnerUser.get('signType')?.valid && (partnerUser.get('signType')?.dirty || (partnerUser.get('signType')?.touched || submitted))">
                               <p class="alert alert-danger error-detail" role="alert" [hidden]="!partnerUser.get('signType')?.errors?.required">
                                 Loại ký không được để trống
                               </p>
@@ -617,7 +622,7 @@
                           <div class="col-md-5">
                             <div class="label_item">Số điện thoại <span class="require_star">*</span></div>
                             <input type="text" formControlName="phone" class="form-control input_phone">
-                            <div *ngIf="!partnerUser.get('phone')?.valid && (partnerUser.get('phone')?.dirty ||partnerUser.get('phone')?.touched)">
+                            <div *ngIf="!partnerUser.get('phone')?.valid && (partnerUser.get('phone')?.dirty || (partnerUser.get('phone')?.touched || submitted))">
                               <p class="alert alert-danger error-detail" role="alert" [hidden]="!partnerUser.get('phone')?.errors?.required">
                                 Số điện thoại không được để trống
                               </p>
