--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.scss
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.scss
@@ -1,7 +1,7 @@
 .add_content{
   border-radius: 10px;
   border: 1px solid #0160AE;
-  margin-bottom: 10px;
+  margin-top: 10px;
 }
 .add_click{
   margin: 10px;
