bs filter contract list

--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -122,12 +122,14 @@
           <div class="label_item">Từ ngày (ngày tạo)</div>
           <div class="input-group">
             <ngx-datepicker [(ngModel)]="startCreateDate" [options]="options" class="date-picker"></ngx-datepicker>
+            <img src="assets/img/db_calendar.svg" class="input-img-calendar">
           </div>
         </div>
         <div class="col-md-6">
           <div class="label_item">Đến ngày (ngày tạo)</div>
           <div class="input-group">
             <ngx-datepicker [(ngModel)]="endCreateDate" [options]="options" class="date-picker"></ngx-datepicker>
+            <img src="assets/img/db_calendar.svg" class="input-img-calendar">
           </div>
         </div>
       </div>
