--- a/src/app/main/contract/contract.component.scss
+++ b/src/app/main/contract/contract.component.scss
@@ -96,6 +96,7 @@
   background: #6c6c6d;
   color: white;
   border: 1px solid #808183;
+  margin: 0 5px;
 }
 .btn_submit{
   width: 90px;
@@ -103,6 +104,7 @@
   background: #106DB6;
   color: white;
   border: 1px solid #87CAFF;
+  margin: 0 5px;
 }
 .label_item{
   padding: 10px 0px 5px;
@@ -121,6 +123,11 @@
 .input-img {
   padding: 10px;
   cursor: pointer;
+}
+.input-img-calendar {
+  top: 10px;
+  right: 15px;
+  position: absolute;
 }
 .input-text {
   border: 0;
@@ -209,6 +216,7 @@
   border: 1px solid #ced4da !important;
   border-radius: .25rem !important;
   transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out !important;
+  outline: 0;
 }
 
 .btn-block {
